Fix spacing on movile for work and end

--- a/_pgbackup/style_1528822400.css
+++ b/_pgbackup/style_1528822400.css
@@ -204,12 +204,10 @@ h1 {
 
 .endc {
     width: 50vw;
+    margin: 0 auto;
     text-align: center;
     color: #cfc6ff;
     font-size: 1.5vw;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100px;
 }
 
 .endt {
@@ -221,7 +219,7 @@ h1 {
 }
 
 .spacer {
-    height: 200px;
+    height: 100px;
 }
 
 .proj {
